--- a/resource/views/pages/page.html
+++ b/resource/views/pages/page.html
@@ -16,7 +16,9 @@
 <body class="bg-dark text-light">
 
     <div class="container">
+        {{header}}
         {{content}}
+        {{footer}}
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
